--- a/styles/_Home.scss
+++ b/styles/_Home.scss
@@ -1,134 +1,147 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
+  justify-content: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title {
-  color: #0070f3;
-  text-decoration: none;
-  margin-bottom: 50px !important;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 500px;
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-}
-
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-  .hide{display: block;}
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+  .title {
+    margin: 0;
+    line-height: 1.15;
+    font-size: 4rem;
+    color: $primary_color;
+    text-decoration: none;
+    margin-bottom: 50px !important;
   }
-}
+  .container {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    border-top: $primary_color solid 15px;
 
-
-.hide {
-  display: none;
-}
-
-
-.card:hover{
-  color: #0070f3;
-  border-color: #0070f3;
-  .hide{display: block;}
+    @media (max-width: 600px) {
+      width: 250px;
+    }
+    .content {
+      box-shadow: -1px 0px 7px 1px$light_grey_color;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      .add-task {
+        width: 100%;
+        .input {
+          width: 80%;
+          padding: 15px 0;
+          padding-left: 20px;
+          border: none;
+        }
+        .btn {
+          width: 20%;
+          padding: 15px 0;
+          cursor: pointer !important;
+          background-color: transparent;
+          border: none;
+        }
+      }
+      .infinite-scroll-component__outerdiv {
+        width: 100%;
+        .infinite-scroll-component {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          .card {
+            padding: 1rem 0;
+            text-align: left;
+            color: inherit;
+            text-decoration: none;
+            border: 1px solid $grey_color;
+            transition: color 0.15s ease, border-color 0.15s ease;
+            width: 100%;
+            list-style-type: none;
+            display: flex;
+            flex-direction: row;
+            .checkBox {
+              margin: 0 20px;
+            }
+            .edit-input {
+              width: 80%;
+              padding: 15px 0;
+              padding-left: 20px;
+              border: none;
+            }
+            .edit-btn {
+              width: 20%;
+              padding: 15px 0;
+              cursor: pointer !important;
+              background-color: transparent;
+              border: none;
+            }
+            .text {
+              width: 100%;
+              text-align: center;
+            }
+            .btn {
+              display: none;
+              margin-right: 20px;
+              cursor: pointer;
+            }
+          }
+          .card:hover {
+            color: $primary_color;
+            border-color: $primary_color;
+            .btn {
+              display: block;
+            }
+          }
+        }
+      }
+    }
+    .options {
+      width: 99%;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+      background-color: $light_grey_color;
+      border-radius: 3px;
+      .block {
+        padding: 5px;
+        cursor: pointer;
+      }
+      .counter {
+        align-self: center;
+        margin-left: 20px;
+      }
+      .clearBtn {
+        margin-right: 20px;
+        align-self: center;
+      }
+      .bold {
+        font-weight: bold;
+      }
+    }
+  }
+  .loader {
+    border: 12px solid $grey_color;
+    border-top: 12px solid $primary_color;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 1.5s linear infinite;
+    margin-bottom: 50px;
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  }
 }
