--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,7 @@
+@import "./base/colors";
+@import "./base/mixins";
+@import "./base/utility";
+
 html,
 body {
   padding: 0;
@@ -16,4 +20,4 @@ a {
 }
 
 
-@import './Home.scss';
+@import "./Home";
